@@ -1,11 +1,13 @@
 2.0a1 (TBD)
 ------------------
+- added `reader.preview`, `reader.point` methods
 - added multi_* functions to rio_tiler.reader to support multiple assets addresses
 - added `rio_tiler.utils.has_mask_band` function
 - added `rio_tiler.utils.get_overview_level` to calculate the overview level needed for partial reading.
 - added type hints
 - added scale, offsets, colormap, datatype and colorinterp in reader.metadata output (#158)
 - new `rio_tiler.colormap` submodule
+- added `unscale` options to rio_tiler.reader._read function apply internal scale/offset (#157)
 
 Breaking Changes:
 - removed python 2 support
@@ -24,6 +26,8 @@ Breaking Changes:
 - replaced `rio_tiler.utils.array_to_image` by `rio_tiler.utils.render`
 - replaced `rio_tiler.utils.apply_cmap` by `rio_tiler.colormap.apply_cmap`
 - replaced `rio_tiler.utils._apply_discrete_colormap` by `rio_tiler.colormap.apply_discrete_cmap`
+- removed `histogram_bins` and `histogram_range` in options in metadata reader.
+  Should now be passed in `hist_options` (e.g: hist_options={bins=10, range=(0, 10)})
 
 1.4.0 (2020-02-19)
 ------------------
